tests/ui/resolve/issue-82156.stderr
error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> $DIR/issue-82156.rs:2:5
   |
LL |     super();
   |     ^^^^^ there are too many leading `super` keywords

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0433`.
